# farstify

./: Dockerfile  README.md  access_token.py  config.py  constants.py  database.py  docker-compose.yaml  docker-compose.yml  liara.json  main.py  models.py  pyproject.toml  requirements.txt  storage.py  uv-assistant.py
actions/: agent_actions.py  artist_actions.py  artist_images_actions.py  artist_short_info_actions.py  categories_actions.py  document_actions.py  episode_actions.py  link_actions.py  ownerships_actions.py  playlist_actions.py  raw_artist_info_actions.py  response_model.py  user_actions.py
actions_functions/: listened.py  task_actions.py
artist/: Dockerfile  pyproject.toml
artist/test_data/: categories.py
category/: pyproject.toml  requirements.txt
document/: pyproject.toml  requirements.txt
document/templates/: dash_player.html  hls_player.html
hls-dash-provider/: Dockerfile  pyproject.toml  requirements.txt
hls-dash-provider/src/: main.py
routers/: agents.py  artist.py  artist_profile.py  categories.py  contributors.py  document.py  episode.py  fetch_document.py  file_url.py  home_page.py  meta_data.py  ownership.py  playlist.py  search.py  socials_link.py  task.py  user.py  user_profile.py  verify_phone.py
routers/admin/: agents.py  artist.py  categories.py  document.py  episode.py  meta_data.py  ownership.py  socials_link.py  task.py
routers/user/: follow.py  (+4 more)
user/: pyproject.toml
utills/: check_follow.py  check_ownership.py  check_username.py  encode_link.py  exceptions.py  get_duration.py  parse_null.py  path_manager.py  temp.py
(+661 files in other folders)
